pkg/tako/testdata/patch-default/dev/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: db
  name: db
spec:
  ports:
    - name: "3306"
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    service: db
  type: ClusterIP
