pkg/tako/testdata/patch-default/dev/default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              network/default: "true"
  podSelector:
    matchLabels:
      network/default: "true"
