pkg/tako/testdata/patch-default/dev/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: wordpress
  name: wordpress
spec:
  ports:
    - name: "8000"
      port: 8000
      protocol: TCP
      targetPort: 80
  selector:
    service: wordpress
  type: ClusterIP
